fixed overlap of error field

--- a/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
@@ -2057,3 +2057,7 @@ div.tab button:first-child {
 .error {
   color: red !important;
 }
+
+.bootstrap-select {
+  margin-bottom: 7px !important;
+}
